add openssl submodule (1.1.1c)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tor"]
 	path = tor
 	url = https://git.torproject.org/tor.git
+[submodule "openssl"]
+	path = openssl
+	url = https://github.com/openssl/openssl.git
